# SafeOps-Firewall-V2

./: # Claude Code Instructions for SafeOps Documentation System.txt  .gitattributes  .gitignore  00_SAFEOPS_PROJECT_OVERVIEW.md  AI_AGENT_EXECUTION_GUIDE.md  AI_TESTING_PROMPT.md  BUILD_GUIDE.md  COMPLETE_DEPENDENCY_MAP.md  COMPREHENSIVE_DEPENDENCY_MAP.md  COMPREHENSIVE_MONITORING_GUIDE.md  CONTEXT_TRANSFER.md  CRITICAL_HTTP_REDIRECT_FIX.md  CRITICAL_MEMORY_FIXES.md  DATA_STRUCTURES.md  DEPENDENCY_MAP.md  DEPENDENCY_MAP_C_HEADERS.md  DEPENDENCY_MAP_MASTER.md  DIRECTORY_STRUCTURE.md  DIRECTORY_STRUCTURE_COMPLETE.md  DIRECTORY_TREE.md  DNS_FIX_GUIDE.md  DNS_FIX_SUMMARY.md  DNS_RESOLUTION_FIX.md  DOCUMENTATION_INDEX.md  ENTERPRISE_ROADMAP.md  FINAL_CHECKLIST_BEFORE_RUN.md  FINAL_STATUS.md  GITIGNORE_INFO.md  GIT_COLLABORATION_GUIDE.md  GO_FINAL_TEST_REPORT.md  HOW_TO_RUN.txt  HYBRID_MITM_DESIGN.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLATION_INDEX.md  INSTALLATION_QUICKSTART.md  INSTALLATION_SCRIPTS_GUIDE.md  INSTALL_README.md  INSTRUCTIONS_FOR_OPUS.md  Install-SafeOpsDev.ps1  (+65 more)
.claude/: settings.local.json
.jules/: sentinel.md
SafeOps App Installer/: SafeOps-App-Setup-Helper.ps1  SafeOps-App-Setup.iss
SafeOps Dependencies Installer/: SafeOps-Setup-Helper.ps1  SafeOps-Setup.iss
SafeOps Installer/: SafeOps-App-Only-Setup.iss  SafeOps-Dependencies-Setup.iss  SafeOps-Install-Helper.ps1  SafeOps-Setup-NoCompress.iss  SafeOps-Setup.iss
backend/: .env.example  db.js  package-lock.json  package.json  server.js
certs/: ca.crt  safeops-root-ca.crt
config/: HOW_TO_MANAGE_NETWORK.md  README.md  README_STRUCTURES.md  config_validator.ps1  network_topology.yaml  safeops.toml  step-ca-integration.toml
database/: DATABASE_MAP.md  DATA_DICTIONARY.md  README.md  init_all_databases.ps1  init_database.ps1  init_database.sh  init_threat_intel.sql  setup_database.ps1
docs/: CURRENT_STATE.md  DATABASE_REFERENCE.md  DEVICE_ENROLLMENT_FLOW.md  FIREWALL_ENGINE_IMPLEMENTATION_PLAN.md  HEADWIND_MDM_INTEGRATION.md  INTEGRATION_GUIDE.md  LOG_FORWARDER_DESIGN.md  MASTER_PLAN_UI.md  NDISAPI_GO_API_REFERENCE.md  NDISAPI_METHOD_SIGNATURES.txt  NDISAPI_QUICK_REFERENCE.txt  POC.md  PROJECT-STATS.md  QUICK-REFERENCE.md  QUICK_START.md  README.md  SONNET-FIREWALL-INSTRUCTIONS.md  TOOLS-DESCRIPTION.md  firewall-engine-implementation-plan.md  safeops_architecture (3).md  safeops_ca_certificate.md
launcher/: main.go
logs/: .gitkeep  README.md  full_log_report.txt  unknown_ips.csv
memory/: FINAL-NETWORK-LOGGER-PLAN.md  IDS-IPS-Requirements-Summary.md  network-logger-final-design.md  network-logger-gaps.md  (+2 more)
src/nic_management/: 01_NIC_MANAGEMENT_DIAGRAM.md  Cargo.toml  INSTALL_NPCAP.md  INSTALL_NPCAP_SDK.md  NIC_DETECTION.txt  README.md  RUNTIME_OUTPUT.txt  SERVICE_ERRORS.txt  TEST_OUTPUT.txt  build.rs  config.yaml  go.mod  go.sum  packet_engine_status.json  test_config.yaml
src/nic_management/api/: connected_devices.go  dhcp_api.go  dhcp_client.go.disabled  nic_api.go  nic_control.go  nic_monitor.go  packet_engine_api.go  topology.go
src/nic_management/api/cmd/: main.go
src/nic_management/cmd/: installer.go  main.go  uninstaller.go
src/nic_management/cmd/nic_detect/: main.go
src/nic_management/cmd/test_tls_connection/: main.go
src/nic_management/config/: config.go  config.toml
src/nic_management/internal/: errors.rs  mod.rs
src/nic_management/internal/capture/: mod.rs  packet_capture.rs
src/nic_management/internal/config/: config.rs  mod.rs
src/nic_management/internal/configuration/: dhcp_integration.go  dns_manager.go  gateway_manager.go  interface_config.go  mtu_manager.go
src/nic_management/internal/discovery/: capabilities.go  classifier.go  enumerator.go  enumerator_linux.go  enumerator_windows.go  monitor.go  physical_detector.go
src/nic_management/internal/driver/: iphlpapi_wrapper.go  ndis_interface.go  raw_socket_linux.rs  winpcap_wrapper.go  wmi_queries.go
src/nic_management/internal/failover/: failover_handler.go  recovery_manager.go  state_machine.go  wan_monitor.go
src/nic_management/internal/grpc/: handlers.go  server.go  stream_handlers.go
src/nic_management/internal/integration/: event_publisher.go  firewall_hooks.go  ids_hooks.go  logger_hooks.go  mod.rs  qos_hooks.go  tls_proxy_client.go  tls_proxy_client.rs
src/nic_management/internal/loadbalancer/: comprehensive_metrics.go  health_checker.go  metrics_collector.go  routing_algorithm.go  session_affinity.go  traffic_distributor.go  wan_selector.go
src/nic_management/internal/nat/: cleanup.go  connection_tracker.go  mapping_table.go  port_allocator.go  session_tracker.go  translator.rs
src/nic_management/internal/performance/: error_counter.go  metrics_aggregator.go  packet_rate.go  statistics.go  throughput.go
src/nic_management/internal/router/: connection_tracker.go  forwarding_engine.rs  packet_capture.rs  packet_queue.rs  routing_engine.rs
src/nic_management/internal/rust_bridge/: ffi.rs  lib.rs  packet_processor.rs
src/nic_management/internal/subprocess/: packet_engine_manager.go
src/nic_management/pkg/client/: client.go
src/nic_management/pkg/types/: nat_types.go  nic_types.go  routing_types.go  types.go
src/nic_management/proto/: dhcp_monitor.proto
src/nic_management/src/: lib.rs
src/nic_management/tests/: integration_test.go  performance_test.go  rust_tests.rs  unit_test.go
src/shared/rust/: Cargo.toml  README.md  RUST_BUILD_REPORT.md  build.rs
src/shared/rust/benches/: hash_performance.rs  ip_parsing.rs
src/shared/rust/src/: buffer_pool.rs  error.rs  hash_utils.rs  ip_utils.rs  lib.rs  lock_free.rs  memory_pool.rs  metrics.rs  proto_utils.rs  simd_utils.rs  time_utils.rs
src/shared/rust/src/proto/: mod.rs  safeops.backup_restore.rs  safeops.certificate_manager.rs  safeops.common.rs  safeops.dhcp_server.rs  safeops.dns_server.rs  safeops.firewall.rs  safeops.ids_ips.rs  safeops.network_logger.rs  safeops.network_manager.rs  safeops.orchestrator.rs  safeops.threat_intel.rs  safeops.tls_proxy.rs  safeops.update_manager.rs  safeops.wifi_ap.rs
(+1304 files in other folders)
