[package]
name = "safeops-shared"
version = "2.0.0"
edition = "2021"
authors = ["SafeOps Security Team"]
description = "Shared high-performance utilities for SafeOps firewall - packet processing, hashing, async ops, metrics"
license = "MIT"

[lib]
name = "safeops_shared"
path = "src/lib.rs"
crate-type = ["rlib"]  # Rust static library for linking into services

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "net", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Networking - gRPC and Protobuf
prost = "0.12"
tonic = { version = "0.10", features = ["transport", "tls"] }

# IP and network utilities
ipnet = "2.9"
cidr-utils = "0.6"

# Hashing - Fast non-cryptographic
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ahash = "0.8"

# SIMD packet parsing (TODO: requires nightly Rust)
# packed_simd_2 = "0.3"

# Performance - Lock-free structures
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.8"
dashmap = "5.5"

# Time utilities
chrono = "0.4"

# Fast byte search
memchr = "2.6"

# Metrics and observability
prometheus = { version = "0.13", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography
ring = "0.17"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "ip_parsing"
harness = false

[[bench]]
name = "hash_performance"
harness = false

[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"                # Link-time optimization across all crates
codegen-units = 1          # Better optimization, slower compile
strip = true               # Remove debug symbols
panic = "abort"            # Smaller binary, no unwinding
